文件管理器窗口可以打开

--- a/data/graceful-desktop-computer.desktop
+++ b/data/graceful-desktop-computer.desktop
@@ -5,7 +5,7 @@ GenericName[tr]=Bilgisayar
 GenericName[zh_CN]=打开计算机
 Name[tr]=Bilgisayar
 Name[zh_CN]=计算机
-Exec=/usr/bin/peony computer:///
+Exec=/usr/bin/graceful-filemanager computer:///
 Icon=computer
 Terminal=false
 Type=Application
