--- a/data/graceful-desktop-home.desktop
+++ b/data/graceful-desktop-home.desktop
@@ -5,7 +5,7 @@ GenericName[tr]=Giriş
 GenericName[zh_CN]=打开个人目录
 Name[tr]=Giriş
 Name[zh_CN]=个人目录
-Exec=/usr/bin/peony
+Exec=/usr/bin/graceful-filemanager
 Icon=user-home
 Terminal=false
 Type=Application
