--- a/data/graceful-desktop.desktop
+++ b/data/graceful-desktop.desktop
@@ -5,7 +5,7 @@ GenericName[tr]=UKUI Dosya Yöneticisi
 GenericName[zh_CN]=文件管理器
 Name[tr]=Peony
 Name[zh_CN]=文件管理器
-Exec=/usr/bin/peony %U
+Exec=/usr/bin/graceful-filemanager %U
 MimeType=inode/directory
 Icon=system-file-manager
 Terminal=false
