--- a/data/graceful-desktop-trash.desktop
+++ b/data/graceful-desktop-trash.desktop
@@ -5,7 +5,7 @@ GenericName[tr]=Çöp
 GenericName[zh_CN]=打开回收站
 Name[tr]=Çöp
 Name[zh_CN]=回收站
-Exec=/usr/bin/peony trash:///
+Exec=/usr/bin/graceful-filemanager trash:///
 Icon=user-trash
 Terminal=false
 Type=Application
